internal/testing/config/envoy.yaml
node:
  id: flightpath-edge
  cluster: flightpath

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

dynamic_resources:
  lds_config:
    api_config_source:
      api_type: GRPC
      grpc_services:
        envoy_grpc:
          cluster_name: xds_cluster
  cds_config:
    api_config_source:
      api_type: GRPC
      grpc_services:
        envoy_grpc:
          cluster_name: xds_cluster

static_resources:
  listeners:
    - name: health_check_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9998
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: healthcheck_edge
                codec_type: AUTO
                route_config:
                  name: health_check_route
                  virtual_hosts:
                    - name: vhs_healthcheck
                      domains:
                        - "*"
                      routes:
                        - name: healthcheck_route
                          match:
                            path: /health
                          direct_response:
                            status: 200
                http_filters:
                  - name: envoy.router

  clusters:
    - name: xds_cluster
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      upstream_connection_options:
        tcp_keepalive: {}
      load_assignment:
        cluster_name: xds_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: flightpath
                      port_value: 7171

stats_sinks:
  - name: envoy.dog_statsd
    config:
      address:
        socket_address:
          protocol: UDP
          address: 127.0.0.1
          port_value: 8125

layered_runtime:
  layers:
    - name: static_layer
      static_layer:
        envoy.deprecated_features:envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager.Tracing.operation_name: true
        envoy.deprecated_features:envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager.idle_timeout: true
